# templates

django/: .gitignore  README.md  nitric.yaml  requirements.txt
django/django_app/: views.py
go/: Makefile  go.mod  go.sum  main.go  nitric.yaml
go/standard/: README.md  go.mod  go.sum  main.go  suga.yaml
python/: .gitignore  README.md  main.py  nitric.yaml  pyproject.toml
python/django/: .gitignore  Makefile  README.md  nitric.yaml  requirements.txt  suga.yaml
python/django/django_app/: settings.py  views.py
python/uv/: .gitignore  Makefile  README.md  main.py  pyproject.toml  suga.yaml
typescript/: README.md  main.ts  nitric.yaml  package-lock.json  package.json
typescript/express/: Makefile  README.md  main.ts  nitric.yaml  package.json  suga.yaml  tsconfig.json
typescript/nitric/ts/client/: client.ts
