[project]
name = "nitric-python-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "grpcio",
  "grpcio-tools",
  "nitric_client @ git+https://github.com/raksiv/nitric.git@git-repo-sdk#egg=nitric_client&subdirectory=client/python",
]

[build-system]
requires = ["setuptools>=40.8.0", "wheel", "pip"]
build-backend = "setuptools.build_meta"
